# financegy

./: .gitignore  LICENSE  README.md  pyproject.toml
financegy/: __init__.py  config.py
financegy/cache/: cache_manager.py
financegy/core/: parser.py  request_handler.py
financegy/modules/: securities.py
financegy/utils/: utils.py
tests/: test_securities.py
