[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financegy"
version = "0.1.0"
description = "Unofficial Python library for accessing GSE (Guyana Stock Exchange) financial data"
authors = [{ name = "Ezra Minty", email = "ezranminty@gmail.com" }]
dependencies = ["requests", "beautifulsoup4"]
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/xbze3/financegy"
Issues = "https://github.com/xbze3/financegy/issues"
